[workspace]
members = [
    "ports/cef",
    "ports/geckolib",
    "ports/servo",
]

[profile.dev]
codegen-units = 4

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

#[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }
#webrender = { path = '../webrender/webrender'}
#webrender_api = { path = '../webrender/webrender_api'}
#[replace]
#"https://github.com/servo/webrender#0.50.0" = { path = '../webrender/webrender' }
#"https://github.com/servo/webrender#webrender_api:0.50.0" = { path = '../webrender/webrender_api' }
#"https://github.com/servo/webrender#0.53.1" = { git = 'https://github.com/szeged/webrender', branch='WR_53_dx11' }
#"https://github.com/servo/webrender#webrender_api:0.53.1" = { git = 'https://github.com/szeged/webrender', branch='WR_53_dx11' }

[patch."https://github.com/servo/webrender"]
"webrender" = { git = 'https://github.com/szeged/webrender', branch='WR_53_dx11' }
"webrender_api" = { git = 'https://github.com/szeged/webrender', branch='WR_53_dx11' }
