[workspace]
members = [
    "ports/servo",
    #"ports/libsimpleservo/",
    "tests/unit/*",
]
default-members = [
    "ports/servo",
    #"ports/libsimpleservo/",
    "tests/unit/*",
]
exclude = [".cargo"]

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

#[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }

[replace]
"https://github.com/servo/webrender#0.57.2" = { git = "https://github.com/szeged/webrender", branch="master_bak_sept" }
"https://github.com/servo/webrender#webrender_api:0.57.2" = { git = "https://github.com/szeged/webrender", branch="master_bak_sept" }
"https://github.com/gfx-rs/gfx.git#gfx-hal:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="b91498e8aa074e9e1936ead9ada4dfc5b7b02a42" }
"https://github.com/gfx-rs/gfx.git#gfx-backend-vulkan:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="b91498e8aa074e9e1936ead9ada4dfc5b7b02a42" }
"https://github.com/gfx-rs/gfx.git#gfx-backend-dx12:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="b91498e8aa074e9e1936ead9ada4dfc5b7b02a42" }
"https://github.com/gfx-rs/gfx.git#gfx-backend-metal:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="b91498e8aa074e9e1936ead9ada4dfc5b7b02a42" }
